refactor Player into a class

--- a/play.html
+++ b/play.html
@@ -31,6 +31,7 @@ limitations under the License.
 <script src="criticalEffects.js"></script>
 <script src="skillDependencies.js"></script>
 <script src="characterCreation.js"></script>
+<script src="player.js"></script>
 <script src="main.js"></script>
 <link rel="stylesheet" type="text/css" href="ui.css">
 </head>
