--- a/play.html
+++ b/play.html
@@ -34,6 +34,7 @@ limitations under the License.
 <script src="worldmap.js"></script>
 <script src="encounters.js"></script>
 <script src="player.js"></script>
+<script src="main.js"></script>
 <link rel="stylesheet" type="text/css" href="ui.css">
 </head>
 <body>
