combat: findTarget selects a target on a different team

--- a/play.html
+++ b/play.html
@@ -19,6 +19,7 @@ limitations under the License.
 <title>DarkFO: Play!</title>
 <script src="heart.js"></script>
 <script src="jquery-1.11.1.min.js"></script>
+<script src="lodash.min.js"></script>
 <script src="util.js"></script>
 <script src="geometry.js"></script>
 <script src="scripting.js"></script>
