--- a/play.html
+++ b/play.html
@@ -34,7 +34,7 @@ limitations under the License.
 <script src="characterCreation.js"></script>
 <script src="worldmap.js"></script>
 <script src="encounters.js"></script>
-<script src="lighttable.js"></script>
+<script src="lightmap.js"></script>
 <script src="lighting.js"></script>
 <script src="intensityColorTable.js"></script>
 <script src="player.js"></script>
