refactor drawing into Renderer and CanvasRenderer

--- a/play.html
+++ b/play.html
@@ -37,6 +37,8 @@ limitations under the License.
 <script src="lightmap.js"></script>
 <script src="lighting.js"></script>
 <script src="intensityColorTable.js"></script>
+<script src="renderer.js"></script>
+<script src="canvasrenderer.js"></script>
 <script src="player.js"></script>
 <script src="main.js"></script>
 <link rel="stylesheet" type="text/css" href="ui.css">
