--- a/play.html
+++ b/play.html
@@ -52,12 +52,13 @@ attribute vec2 a_texCoord;
 varying vec2 v_texCoord;
 
 uniform vec2 u_resolution;
-
 uniform vec2 u_offset;
+uniform vec2 u_scale;
+
 
 void main() {
    // convert the rectangle from pixels to 0.0 to 1.0
-   vec2 zeroToOne = (a_position + u_offset) / u_resolution;
+   vec2 zeroToOne = (a_position * u_scale + u_offset) / u_resolution;
 
    // convert from 0->1 to 0->2
    vec2 zeroToTwo = zeroToOne * 2.0;
@@ -76,12 +77,11 @@ void main() {
 precision mediump float;
 
 uniform sampler2D u_image;
-uniform float uOffset;
+
 varying vec2 v_texCoord;
 
 void main() {
-   //gl_FragColor = vec4(0,1,0,1);  // green
-   gl_FragColor = texture2D(u_image, v_texCoord + vec2(uOffset, 0));
+	gl_FragColor = texture2D(u_image, v_texCoord);
 }
 </script>
 </head>
