ui: add fps overlay

--- a/play.html
+++ b/play.html
@@ -150,7 +150,11 @@ void main() {
 <body>
 <div id="game-container">
 	<canvas id="cnv" width="800" height="600">your browser doesn't support &lt;canvas&gt;</canvas>
-	<div id="overlay"></div>
+	<div id="overlay-container">
+		<div id="overlay">
+			<div id="fpsOverlay"></div>
+		</div>
+	</div>
 	<div id="lootBox">
 		<div id="lootBoxLeft"></div>
 		<div id="lootBoxRight"></div>
