--- a/play.html
+++ b/play.html
@@ -20,6 +20,7 @@ limitations under the License.
 <script src="heart.js"></script>
 <script src="jquery-1.11.1.min.js"></script>
 <script src="lodash.min.js"></script>
+<script src="config.js"></script>
 <script src="util.js"></script>
 <script src="geometry.js"></script>
 <script src="scripting.js"></script>
