webgl: some shader adjustments

--- a/play.html
+++ b/play.html
@@ -122,21 +122,22 @@ int colorToColorTableRGB(const vec3 color) {
 }
 
 vec4 atIndex(sampler2D tex, int index) {
-	const int size = 256; // max size of texture
-	float x = mod(float(index), float(size));
-	return texture2D(tex, vec2(x / float(size),
-		                       /* 1.0 - */ (float(index / size) / float(size)))); // use upside-down V coordinates because OpenGL likes textures bottom-to-top but we don't play their game
+	const float size = 256.0; // max size of texture
+	float x = mod(float(index), size);
+	float y = /* 1.0 - */ float(index / int(size)); // use upside-down V coordinates because OpenGL likes textures bottom-to-top but we don't play their game
+	return texture2D(tex, vec2((x + 0.5) / size,
+		                       (y + 0.5) / size));
 }
 
 vec3 paletteColor(int palIdx) {
-	return texture2D(u_paletteRGB, vec2(float(palIdx) / 256.0, 1.0)).rgb;
+	return texture2D(u_paletteRGB, vec2((float(palIdx) + 0.5) / 256.0, 1.0)).rgb;
 }
 
 void main() {
 	vec4 tileTexel = texture2D(u_image, v_texCoord);
 	vec4 light = texture2D(u_lightBuffer, v_texCoord);
 
-	float lightIntensity = min(light.x, 65536.0);
+	float lightIntensity = min(light.r, 65536.0);
 
 	int colorIdx = colorToColorTableRGB(tileTexel.rgb);
 	int palIdx = int(atIndex(u_colorTable, colorIdx).r);
