implement audio engine

--- a/play.html
+++ b/play.html
@@ -42,6 +42,7 @@ limitations under the License.
 <script src="canvasrenderer.js"></script>
 <script src="webglrenderer.js"></script>
 <script src="player.js"></script>
+<script src="audio.js"></script>
 <script src="main.js"></script>
 <link rel="stylesheet" type="text/css" href="ui.css">
 
