implement serialize method on GameMap and Obj

--- a/play.html
+++ b/play.html
@@ -17,6 +17,7 @@ limitations under the License.
 <html>
 <head>
 <title>DarkFO: Play!</title>
+<script src="bson.js"></script>
 <script src="heart.js"></script>
 <script src="jquery-1.11.1.min.js"></script>
 <script src="lodash.min.js"></script>
