improve object/map (de)serialization

--- a/play.html
+++ b/play.html
@@ -18,6 +18,7 @@ limitations under the License.
 <head>
 <title>DarkFO: Play!</title>
 <script src="bson.js"></script>
+<script src="pako.min.js"></script>
 <script src="heart.js"></script>
 <script src="jquery-1.11.1.min.js"></script>
 <script src="lodash.min.js"></script>
