implement more instructions; fix void instructions

--- a/play.html
+++ b/play.html
@@ -26,6 +26,7 @@ limitations under the License.
 <script src="scripting.js"></script>
 
 <script src="intfile.js"></script>
+<script src="dis.js"></script>
 <script src="vm.js"></script>
 <script src="vm_bridge.js"></script>
 
