implement Repair skill

--- a/play.html
+++ b/play.html
@@ -241,10 +241,18 @@ void main() {
 
 		<div id="skilldex-lockpick" class="skilldexFont">Lockpick</div>
 		<div id="skilldex-lockpick-number">
-			<div id="skilldex-lockpick-digit1" class="number"></div>
-			<div id="skilldex-lockpick-digit2" class="number"></div>
-			<div id="skilldex-lockpick-digit3" class="number"></div>
-			<div id="skilldex-lockpick-digit4" class="number"></div>
+			<div id="skilldex-lockpick-digit1" class="number skilldex-digit1"></div>
+			<div id="skilldex-lockpick-digit2" class="number skilldex-digit2"></div>
+			<div id="skilldex-lockpick-digit3" class="number skilldex-digit3"></div>
+			<div id="skilldex-lockpick-digit4" class="number skilldex-digit4"></div>
+		</div>
+
+		<div id="skilldex-repair" class="skilldexFont">Repair</div>
+		<div id="skilldex-repair-number">
+			<div id="skilldex-repair-digit1" class="number skilldex-digit1"></div>
+			<div id="skilldex-repair-digit2" class="number skilldex-digit2"></div>
+			<div id="skilldex-repair-digit3" class="number skilldex-digit3"></div>
+			<div id="skilldex-repair-digit4" class="number skilldex-digit4"></div>
 		</div>
 		
 		<div id="skilldexCancelButton"></div>
