--- a/play.html
+++ b/play.html
@@ -48,6 +48,7 @@ limitations under the License.
 <script src="canvasrenderer.js"></script>
 <script src="webglrenderer.js"></script>
 <script src="player.js"></script>
+<script src="party.js"></script>
 <script src="audio.js"></script>
 <script src="main.js"></script>
 <link rel="stylesheet" type="text/css" href="ui.css">
