add saveload.ts which uses IndexedDB-backed DB to store (currently dummy) save data

--- a/play.html
+++ b/play.html
@@ -60,6 +60,8 @@ limitations under the License.
 <script src="js/ui.js"></script>
 <script src="js/audio.js"></script>
 
+<script src="js/saveload.js"></script>
+
 <script src="js/main.js"></script>
 
 <link rel="stylesheet" type="text/css" href="ui.css">
