ui: Add buttons to enter/leave save/load dialog

--- a/play.html
+++ b/play.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2014-2015 darkf
+Copyright 2014-2017 darkf
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -314,7 +314,7 @@ void main() {
 		<div id="calledShot-groin-chance" class="calledShotChance"></div>
 		<div id="calledShot-torso-chance" class="calledShotChance"></div>
 	</div>
-	<div id="saveloadBox">
+	<div id="saveloadBox" class="disable-selection">
 		<div id="saveloadCover"></div>
 		<div id="saveloadListContainer">
 			<ul id="saveLoadList">
