ui: Wire up SaveLoad dialog

--- a/play.html
+++ b/play.html
@@ -317,7 +317,7 @@ void main() {
 	<div id="saveloadBox" class="disable-selection">
 		<div id="saveloadCover"></div>
 		<div id="saveloadListContainer">
-			<ul id="saveLoadList">
+			<ul id="saveloadList">
 				<li>Test</li>
 				<li>Foo</li>
 				<li>Bar</li>
