ui: add save/load game header

--- a/play.html
+++ b/play.html
@@ -316,6 +316,7 @@ void main() {
 	</div>
 	<div id="saveloadBox" class="disable-selection">
 		<div id="saveloadCover"></div>
+		<div id="saveloadHeader"></div>
 		<div id="saveloadListContainer">
 			<ul id="saveloadList">
 				<li>Test</li>
