add IDBCache for caching large objects

--- a/play.html
+++ b/play.html
@@ -61,6 +61,7 @@ limitations under the License.
 <script src="js/audio.js"></script>
 
 <script src="js/saveload.js"></script>
+<script src="js/idbcache.js"></script>
 
 <script src="js/main.js"></script>
 
