play: remove debug list items

--- a/play.html
+++ b/play.html
@@ -319,11 +319,7 @@ void main() {
 		<div id="saveloadCover"></div>
 		<div id="saveloadHeader"></div>
 		<div id="saveloadListContainer">
-			<ul id="saveloadList">
-				<li>Test</li>
-				<li>Foo</li>
-				<li>Bar</li>
-			</ul>
+			<ul id="saveloadList"></ul>
 		</div>
 		<div id="saveloadInfo">
 			test
