move external JS libraries to lib/

--- a/play.html
+++ b/play.html
@@ -20,10 +20,10 @@ limitations under the License.
 
 <link rel="stylesheet" type="text/css" href="ui.css">
 
-<script src="heart.js"></script>
-<script src="jquery-1.11.1.min.js"></script>
-<script src="lodash.min.js"></script>
-<script src="pathfinding-browser.js"></script>
+<script src="lib/heart.js"></script>
+<script src="lib/jquery-1.11.1.min.js"></script>
+<script src="lib/lodash.min.js"></script>
+<script src="lib/pathfinding-browser.js"></script>
 
 <script src="js/config.js"></script>
 
