Add modularized logging implementation

--- a/play.html
+++ b/play.html
@@ -26,6 +26,7 @@ limitations under the License.
 <script src="lib/pathfinding-browser.js"></script>
 
 <script src="js/config.js"></script>
+<script src="js/logging.js"></script>
 
 <script src="js/util.js"></script>
 <script src="js/geometry.js"></script>
