Add option to use optional color LUTs for lighting

--- a/play.html
+++ b/play.html
@@ -49,6 +49,8 @@ limitations under the License.
 
 <script src="js/lightmap.js"></script>
 <script src="js/lighting.js"></script>
+<!-- Optional look-up table -->
+<script src="lut/intensityColorTable.js"></script>
 
 <script src="js/renderer.js"></script>
 <script src="js/canvasrenderer.js"></script>
