Add very WIP hosted multiplayer connection/netcode

--- a/play.html
+++ b/play.html
@@ -66,6 +66,8 @@ limitations under the License.
 <script src="js/saveload.js"></script>
 <script src="js/idbcache.js"></script>
 
+<script src="js/net.js"></script>
+
 <script src="js/main.js"></script>
 
 <!-- WebGL vertex shader -->
