Send map compressed over binary

--- a/play.html
+++ b/play.html
@@ -24,6 +24,7 @@ limitations under the License.
 <script src="lib/jquery-1.11.1.min.js"></script>
 <script src="lib/lodash.min.js"></script>
 <script src="lib/pathfinding-browser.js"></script>
+<script src="lib/pako.min.js"></script>
 
 <script src="js/config.js"></script>
 
