--- a/play.html
+++ b/play.html
@@ -30,6 +30,8 @@ limitations under the License.
 
 <script src="js/util.js"></script>
 <script src="js/geometry.js"></script>
+
+<script src="js/pro.js"></script>
         
 <script src="js/scripting.js"></script>
 <script src="js/intfile.js"></script>
