--- a/play.html
+++ b/play.html
@@ -73,6 +73,7 @@ limitations under the License.
 
 <script src="js/net.js"></script>
 
+<script src="js/map.js"></script>
 <script src="js/main.js"></script>
 
 <!-- WebGL vertex shader -->
