--- a/play.html
+++ b/play.html
@@ -44,7 +44,7 @@ limitations under the License.
         
 <script src="js/criticalEffects.js"></script>
 <script src="js/skillDependencies.js"></script>
-<script src="js/characterCreation.js"></script>
+<script src="js/char.js"></script>
 
 <script src="js/data.js"></script>
 <script src="js/worldmap.js"></script>
