play.html: Declare utf-8 charset, change title

--- a/play.html
+++ b/play.html
@@ -16,7 +16,8 @@ limitations under the License.
 
 <html>
 <head>
-<title>DarkFO: Play!</title>
+<title>DarkFO</title>
+<meta charset="utf-8">
 
 <link rel="stylesheet" type="text/css" href="ui.css">
 
