play.html: Use HTML5 doctype

--- a/play.html
+++ b/play.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--
 Copyright 2014-2017 darkf
 
@@ -230,8 +231,8 @@ void main() {
 
 		<div id="attackButtonContainer" class="disable-selection">
 			<div id="attackButton"></div>
-			<img id="attackButtonType"></img>
-			<img id="attackButtonWeapon"></img>
+			<img id="attackButtonType">
+			<img id="attackButtonWeapon">
 			<div id="attackButtonCalled"></div>
 			<div id="attackButtonAP">
 				<div id="attackButtonAPDigit"></div>
