--- a/play.html
+++ b/play.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Copyright 2014-2017 darkf
+Copyright 2014 darkf
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
